--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <title>Abstraction</title>
-    <link rel="stylesheet" type="text/css" href="./Abstraction_files/index.css">
+    <link rel="stylesheet" type="text/css" href="./index.css">
   </head>
 
   <body onload="start()">  
@@ -28,6 +28,6 @@
   -->
 
     
-  	<script type="text/javascript" src="./Abstraction_files/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="./Abstraction_files/index.js"></script>
+  	<script type="text/javascript" src="./jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
 </body></html>
