--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
      <canvas id="tileCanvas4"></canvas>
      
      
-     <img id="redTile" class="tile" src="./Abstraction_files/Red Tile.jpeg">
-     <img id="blueTile" class="tile" src="./Abstraction_files/Blue Tile.jpeg">
-     <img id="greenTile" class="tile" src="./Abstraction_files/Green Tile.jpeg">
-     <img id="yellowTile" class="tile" src="./Abstraction_files/Yellow Tile.jpeg">
+     <img id="redTile" class="tile" src="./Red Tile.jpeg">
+     <img id="blueTile" class="tile" src=".Blue Tile.jpeg">
+     <img id="greenTile" class="tile" src="./Green Tile.jpeg">
+     <img id="yellowTile" class="tile" src="./Yellow Tile.jpeg">
   </div>
   <!--
   <div id="footer">    
