--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      
      
      <img id="redTile" class="tile" src="./Red Tile.jpeg">
-     <img id="blueTile" class="tile" src=".Blue Tile.jpeg">
+     <img id="blueTile" class="tile" src="./Blue Tile.jpeg">
      <img id="greenTile" class="tile" src="./Green Tile.jpeg">
      <img id="yellowTile" class="tile" src="./Yellow Tile.jpeg">
   </div>
